<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="الرئيسية" />
    <item
        android:id="@+id/nav_stories"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="الستوري" />
    <item
        android:id="@+id/nav_reels"
        android:icon="@android:drawable/ic_media_play"
        android:title="الريلز" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/sym_action_chat"
        android:title="الدردشة" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="حسابي" />
</menu>
